# dbox

./: .gitignore  LICENSE  README.md  initial_product_requirement.md  initial_tool_requirement.md  pyproject.toml
docs/: README.md  architecture.md  commands.md  configuration.md  contributing.md  databases.md  extensions.md  frameworks.md  getting-started.md  installation.md  plugins.md  runtimes.md  services.md  ssl.md  web-servers.md
scripts/: install.ps1  install.sh  uninstall.ps1  uninstall.sh
src/dbox/: __init__.py  __main__.py  certs.py  cli.py  config.py  console.py  detection.py  doctor.py  engine.py  extensions.py  generator.py  ports.py  updater.py
src/dbox/plugins/: __init__.py  actix.py  axum.py  base.py  cakephp.py  codeigniter.py  codeigniter3.py  corephp.py  drupal.py  echo.py  gin.py  go.py  joomla.py  laravel.py  magento.py  rust.py  symfony.py  wordpress.py  yii.py
src/dbox/templates/: docker-compose.yml.j2
src/dbox/templates/apache/: ssl.conf.j2
src/dbox/templates/caddy/: Caddyfile.j2
src/dbox/templates/env/: env.j2
src/dbox/templates/go/: Dockerfile.j2  air.toml.j2
src/dbox/templates/litespeed/: httpd_config.conf.j2  vhconf.conf.j2
src/dbox/templates/nginx/: default.conf.j2
src/dbox/templates/php/: Dockerfile.j2  php.ini.j2
src/dbox/templates/rust/: Dockerfile.j2
src/phpbox/: __init__.py  __main__.py  certs.py  cli.py  config.py  console.py  detection.py  doctor.py  engine.py  extensions.py  generator.py  ports.py  updater.py
src/phpbox/plugins/: __init__.py  base.py  cakephp.py  codeigniter.py  codeigniter3.py  corephp.py  drupal.py  joomla.py  laminas.py  laravel.py  magento.py  slim.py  symfony.py  wordpress.py  yii.py
src/phpbox/templates/: docker-compose.yml.j2
src/phpbox/templates/apache/: ssl.conf.j2
src/phpbox/templates/caddy/: Caddyfile.j2
src/phpbox/templates/env/: env.j2
src/phpbox/templates/litespeed/: httpd_config.conf.j2  vhconf.conf.j2
src/phpbox/templates/nginx/: default.conf.j2
src/phpbox/templates/php/: Dockerfile.j2  php.ini.j2
tests/: test_dbox.py  test_phpbox.py
