[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phpbox"
version = "0.1.0"
description = "Universal PHP Development Environment Manager — run any PHP framework with only Docker installed."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "PHPBox" }]
keywords = ["php", "docker", "laravel", "symfony", "wordpress", "development", "cli"]

dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "click>=8.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pyinstaller>=6.0"]

[project.urls]
Homepage = "https://github.com/your-org/phpbox"
Documentation = "https://github.com/your-org/phpbox/tree/master/docs"
Repository = "https://github.com/your-org/phpbox"
Issues = "https://github.com/your-org/phpbox/issues"

[project.scripts]
phpbox = "phpbox.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
include = ["phpbox*"]

[tool.setuptools.package-data]
phpbox = ["templates/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
