[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dbox"
version = "0.2.0"
description = "Universal PHP Development Environment Manager — run any PHP framework with only Docker installed."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "DBox" }]
keywords = ["php", "docker", "laravel", "symfony", "wordpress", "development", "cli"]

dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "click>=8.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pyinstaller>=6.0"]

[project.urls]
Homepage = "https://github.com/manishkumar1601/dbox"
Documentation = "https://github.com/manishkumar1601/dbox/tree/master/docs"
Repository = "https://github.com/manishkumar1601/dbox"
Issues = "https://github.com/manishkumar1601/dbox/issues"

[project.scripts]
dbox = "dbox.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
include = ["dbox*"]

[tool.setuptools.package-data]
dbox = ["templates/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
